force-app/main/default/objects/ARCSEMailList__c/ARCSEMailList__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This contains the list of emails that will receive ARCS related emails.</description>
    <label>ARCSEMailList</label>
</CustomObject>