force-app/main/default/objects/ARCSEMailList__c/fields/EmailID__c.field-meta.xml
<CustomField>
    <fullName>EmailID__c</fullName>
    <label>EmailID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>