force-app/main/default/objects/ARCSEMailList__c/fields/Financial_EmailID__c.field-meta.xml
<CustomField>
    <fullName>Financial_EmailID__c</fullName>
    <description>Stores Email addresses which need notification for users which have LOB Financial or their managers have LOB value Financial.</description>
    <label>Financial EmailID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>