force-app/main/default/objects/ARCSEMailList__c/fields/Retail_EmailID__c.field-meta.xml
<CustomField>
    <fullName>Retail_EmailID__c</fullName>
    <description>Stores Email addresses which need notification for users which have LOB Retail or their managers have LOB value Retail.</description>
    <label>Retail EmailID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>