force-app/main/default/objects/ARCSEMailList__c/fields/TNT_EmailID__c.field-meta.xml
<CustomField>
    <fullName>TNT_EmailID__c</fullName>
    <description>Stores Email addresses which need notification for users which have LOB T&amp;T or their managers have LOB value T&amp;T.</description>
    <label>TNT EmailID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>